# softserve-academy-tasks

./: .gitignore  CMakeLists.txt  README.md
task1/: StringList.cpp  StringList.hpp  main.cpp
task2/: AnyType.hpp  main.cpp
task3/: Analyzer.cpp  Analyzer.hpp  ArgParser.cpp  ArgParser.hpp  ThreadPool.hpp  Writer.hpp  main.cpp
